# digital-objects-zkvm-poc

./: .env.example  .gitignore  Cargo.toml  README.md
axe/: Cargo.toml
axe/src/: main.rs
commitlib/: Cargo.toml
commitlib/src/: eth.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
craftlib/: Cargo.toml  README.md  build.rs
craftlib/axe/src/: constants.rs  main.rs
craftlib/common/src/: lib.rs
craftlib/craft/: Cargo.toml  build.rs
craftlib/craft/src/: main.rs  save.rs
craftlib/pow/: Cargo.toml
craftlib/pow/src/: lib.rs  main.rs
craftlib/program/: Cargo.toml
craftlib/script/: Cargo.toml  build.rs
craftlib/src/: main.rs
craftlib/stone/: Cargo.toml
craftlib/stone/src/: constants.rs  lib.rs  main.rs
craftlib/wood/: Cargo.toml
craftlib/wood/src/: constants.rs  main.rs
pow/: Cargo.toml
programs/axe/: Cargo.toml
programs/axe/program/: Cargo.toml
programs/axe/program/src/: constants.rs  main.rs
programs/axe/src/: main.rs
programs/commit/: Cargo.toml
programs/commit/program/: Cargo.toml
programs/commit/program/src/: main.rs
programs/commit/src/: lib.rs  main.rs
programs/common/: Cargo.toml
programs/common/src/: lib.rs
programs/pow/: Cargo.toml
programs/pow/program/: Cargo.toml
programs/pow/program/src/: lib.rs  main.rs
programs/pow/src/: main.rs
programs/stone/: Cargo.toml
programs/stone/program/: Cargo.toml
programs/stone/program/src/: main.rs
programs/stone/src/: main.rs
programs/wood/: Cargo.toml
programs/wood/program/: Cargo.toml
programs/wood/program/src/: constants.rs  main.rs
programs/wood/src/: main.rs
stone/src/: main.rs
synchronizer/: Cargo.toml  build.rs
synchronizer/src/: main.rs  node.rs
utils/: Cargo.toml
utils/src/: lib.rs
