[workspace]
members = [
    "craftlib",
    "commitlib",
    "synchronizer",
    "programs/common",
    "programs/pow",
    "programs/pow/program",
    "programs/wood",
    "programs/wood/program",
    "programs/stone",
    "programs/stone/program",
    "programs/axe",
    "programs/axe/program",
    "programs/commit",
    "programs/commit/program",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.56"
dotenvy = "0.15.7"
sha2 = "0.10.8"
serde = "1.0.204"
bincode = "1.3.3"
hex = "0.4.3"
risc0-zkvm = { version = "^3.0.4" }
alloy = { version = "1.2.1", features = [
    "eips",
    "full",
    "json-rpc",
    "hyper", #
    "transport-http",
    "signer-local",
    "rpc-client",
    "rpc-types-beacon"
] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }