[package]
name = "commitlib"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = { workspace = true }
alloy = { workspace = true }
tokio = { workspace = true }
risc0-zkvm = { version = "^3.0.4" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
hex = { workspace = true }
tracing = "0.1.40"
dotenv = "0.15.0"
sha2 = "0.10.8"
rand = "0.8"
bincode = { workspace = true }
utils = { path = "../utils" }
common = { path = "../programs/common" }
commit = { path = "../programs/commit" }
commit-program = { path = "../programs/commit/program" }