[package]
name = "craftlib"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { workspace = true }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
dotenv = "0.15.0"
sha2 = "0.10.8"
rand = "0.8"
bincode = { workspace = true }
utils = { path = "../utils" }
common = { path = "../programs/common" }
pow-program = { path = "../programs/pow" }
wood-program = { path = "../programs/wood" }
stone-program = { path = "../programs/stone" }
axe-program = { path = "../programs/axe" }

[build-dependencies]
sp1-build = "5.0.8"
