[package]
name = "craftlib"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "^3.0.4" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = { workspace = true }
dotenv = "0.15.0"
sha2 = "0.10.8"
rand = "0.8"
bincode = { workspace = true }
utils = { path = "../utils" }
common = { path = "../programs/common" }
pow = { path = "../programs/pow" }
pow-program = { path = "../programs/pow/program" }
wood = { path = "../programs/wood" }
wood-program = { path = "../programs/wood/program" }
stone = { path = "../programs/stone" }
stone-program = { path = "../programs/stone/program" }