[package]
name = "synchronizer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
alloy = { workspace = true }
tokio = { workspace = true }
sp1-sdk = { workspace = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
hex = { workspace = true }
tracing = "0.1.40"
dotenv = "0.15.0"
sha2 = "0.10.8"
rand = "0.8"
bincode = { workspace = true }
thiserror = "1.0.40"
url = { version = "2.3.1", features = ["serde"] }
reqwest = { version = "0.12.15", features = ["json"] }
reqwest-eventsource = "0.6.0"
backoff = { version = "0.4.0", features = ["tokio"] }
utils = { path = "../utils" }
common = { path = "../programs/common" }
commit-program = { path = "../programs/commit" }

[build-dependencies]
sp1-build = "5.0.8"
