[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
bincode = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
risc0-zkvm = { workspace = true }
common = { path = "../programs/common" }