[package]
name = "fibonacci-script"
version = "0.1.0"
edition = "2021"
default-run = "fibonacci"

[[bin]]
name = "fibonacci"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = "5.0.8"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
dotenv = "0.15.0"
sha2 = "0.10.8"
pow-program = { path = "../pow" }
stone-program = { path = "../stone" }
rand = "0.9.2"
bincode = { workspace = true }

[build-dependencies]
sp1-build = "5.0.8"
